apps/kubernetes/k3s/apps/home-assistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.hughboi.cc`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: hughboi-tls
